fix: removing too much padding

--- a/src/components/ForecastInformation/styles.scss
+++ b/src/components/ForecastInformation/styles.scss
@@ -1,8 +1,9 @@
 .forecast-information {
-  padding: 40px;
+  padding: 40px 0;
   text-align: center;
   margin: 0 auto;
   width: 80%;
+
   h1 {
     font-weight: 400;
     font-size: 18px;
