--- a/src/components/GlobalInformation/styles.scss
+++ b/src/components/GlobalInformation/styles.scss
@@ -1,5 +1,5 @@
 .global-info {
-  padding: 40px;
+  padding: 40px 0;
   text-align: center;
   margin: 0 auto;
   width: 80%;
