--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  text-align: center;
 
   .searcher-buttons{
     display: flex;
